--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: DeathSwap
 version: '${project.version}'
 main: dev.derock.deathswap.DeathSwap
 api-version: '1.20'
+softdepend: ['Multiverse-Core']
 commands:
   deathswap:
     description: DeathSwap command
